Versao final jogo do sonegador de impostos

--- a/01_WolfAndRabbitP5TS/index.html
+++ b/01_WolfAndRabbitP5TS/index.html
@@ -17,13 +17,16 @@
     <link rel="icon" href="https://p5js.org/assets/img/favicon.ico" />
 
     <style>
-      * {
+      h1, body, p {
         padding: 0px;
-        margin: 0px;
+        margin: 20px;
       }
     </style>
     <script></script>
   </head>
 
-  <body></body>
+  <body>
+    <h1>JOGO DO SONEGADOR DE IMPOSTOS</h1>
+    <p>Para movimentar o personagem, é só usar as teclas de seta do seu teclado. O seu objetivo é pegar as contas espalhadas pelo mapa e incinerá-las! Para fazer isso, pegue uma conta qualquer e vá até a área destacada de amarelo, depois disso, aperte a letra E no seu teclado.</p>
+  </body>
 </html>
